[tool.poetry]
name = "follow-label-data"
version = "0.0.1"
description = "Generate train data from state to label."
authors = ["penglingwei <penglingwei@zju.edu.cn>"]
license = "MIT"
readme = "README.md"
packages = [{include = "follow_label_data"}]

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = "^0.25.2"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
